# flan

./: .clang-format  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  justfile  meson.build  program.capnp
.github/workflows/: rust-ci.yml
include/: gc.hpp  value.hpp  vm.hpp
src/: README.md  ast.rs  cli.rs  debug.rs  error.rs  flan.c  gc.c  gc.cpp  gc.h  hashmap.c  hashmap.h  impala.cpp  lexer.rs  main.rs  parser.rs  stack.c  stack.h  token.rs  utf8.h  value.c  value.cpp  value.h  vm.c  vm.cpp  vm.h
src/compiler/: chunk.rs  debug.rs  mod.rs  opcode.rs  util.rs  value.rs
src/error/: mod.rs
src/frontend/: ast.rs  debug.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/interpreter/: engine.rs  interpreter.rs  mod.rs  scope.rs  value.rs
src/lexer/: mod.rs  token.rs
src/parser/: expr.rs  mod.rs
src/util/: mod.rs
src/vm/: closure.rs  destruct.rs  function.rs  mod.rs  object.rs  util_macro.rs  value.rs
src/vm/gc/: heap.rs
src/vm/native/: mod.rs  native_func.rs
