[package]
name = "flan"
version = "0.0.0"
edition = "2021"
rust-version = "1.56.1"

description = "Functional LANguage"
license-file = "LICENSE.txt"
keywords = ["language"]
categories = ["compilers", "virtual machines"]
authors = ["Nobuharu Shimazu <nobu.bichanna@gmail.com>"]
repository = "https://github.com/bichanna/flan"

[dependencies]
byteorder = "1"
