[package]
name = "flan"
version = "0.0.0"
edition = "2021"
rust-version = "1.56.1"

description = "Functional LANguage"
license-file = "LICENSE.txt"
keywords = ["language"]
categories = ["compilers", "virtual machines"]
keywords = ["language", "programming language", "vm"]
authors = ["Nobuharu Shimazu <nobu.bichanna@gmail.com>"]
repository = "https://github.com/bichanna/flan"
readme = "README.md"

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
dyn-clone = "1.0"
clap = { version = "4.3", features = ["color", "usage", "help", "suggestions"] }

[features]
debug = []
