[package]
name = "flan"
version = "0.0.0"
edition = "2021"
rust-version = "1.56.1"

description = "A simple, intuitive, expression-oriented programming language"
license-file = "LICENSE.txt"
categories = ["compilers", "virtual machines"]
keywords = ["language", "programming language"]
authors = ["Nobuharu Shimazu <nobu.bichanna@gmail.com>"]
repository = "https://github.com/bichanna/flan"
readme = "README.md"

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
dyn-clone = "1.0"
arrayvec = "0.7"
clap = { version = "4.3", features = ["derive"] }

[features]
debug = []
